Update rebar.config (remove lager, use new nkpacket)
Also: skip fail_on_warning to build successfully on Erlang 27

--- a/rebar.config
+++ b/rebar.config
@@ -2,9 +2,7 @@
 
 {erl_opts, [
     % native,
-    debug_info, 
-    fail_on_warning, 
-    {parse_transform, lager_transform}
+    debug_info
 ]}.
 
 {cover_enabled, true}.
@@ -12,7 +10,7 @@
 
 
 {deps, [
-	{nkpacket, ".*", {git, "http://github.com/nekso/nkpacket", {tag, "v0.6.1"}}},
+	{nkpacket, ".*", {git, "http://github.com/esl/nkpacket", {branch, "remove-lager"}}},
 	% {nkdocker, ".*", {git, "http://github.com/nekso/nkdocker", {branch, "develop"}}},
 	{luerl, ".*", {git, "https://github.com/rvirding/luerl.git", {branch, "develop"}}}
 ]}.
