--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
 
 
 {deps, [
-	{nkpacket, ".*", {git, "http://github.com/esl/nkpacket", {branch, "remove-lager"}}},
+	{nkpacket, ".*", {git, "http://github.com/esl/nkpacket", {branch, "mongooseim"}}},
 	% {nkdocker, ".*", {git, "http://github.com/nekso/nkdocker", {branch, "develop"}}},
 	{luerl, ".*", {git, "https://github.com/rvirding/luerl.git", {branch, "develop"}}}
 ]}.
